@@ -444,6 +444,7 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - src/onmainwindow.cpp: use the new functions in generateKey ().
     - src/onmainwindow.h: move generateKey () declaration around.
     - src/onmainwindow.{cpp,h}: reformat generateKey () only.
+    - src/onmainwindow.{cpp,h}: move createRSAKey () around.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
